testsuite/tests/properties/invalid_nullconddotexpr/test.out
== foo.lkt ==
foo.lkt:13:41: error: null-conditional dotted name notation is illegal to designate an enum value
13 |     @exported fun p(): MyEnum = MyEnum?.a
   |                                         ^


lkt_compile: Done
